Add magnetic field results to paper

--- a/pulsed.tex
+++ b/pulsed.tex
@@ -37,7 +37,7 @@ Understanding a circuit always starts with drawing a simple diagram, see \cref{f
 \begin{figure}[h!]
 \centering
 \input{images/circuit_diagram}
-\caption{A Simple Plasma Transformer Description.}
+\caption{A Simple Plasma Transformer Description}
 \label{fig:circuit_diagram}
 \end{figure}
 
