Update title page to work under specs

--- a/cover.tex
+++ b/cover.tex
@@ -50,7 +50,8 @@
 \author{Daniel Joseph Segal}
 % If you wish to list your previous degrees on the cover page, use the 
 % previous degrees command:
-%       \prevdegrees{A.A., Harvard University (1985)}
+       \prevdegrees{B.S.\ Engineering Physics, University of Wisconsin (2014)}
+       
 % You can use the \\ command to list multiple previous degrees
 %       \prevdegrees{B.S., University of California (1978) \\
 %                    S.M., Massachusetts Institute of Technology (1981)}
@@ -63,9 +64,9 @@
 
 % As of the 2007-08 academic year, valid degree months are September, 
 % February, or June.  The default is June.
-\degreemonth{September}
+\degreemonth{February}
 \degreeyear{2018}
-\thesisdate{August 31, 2018}
+\thesisdate{November 11, 2018}
 
 %% By default, the thesis will be copyrighted to MIT.  If you need to copyright
 %% the thesis to yourself, just specify the `vi' documentclass option.  If for
@@ -80,8 +81,9 @@
 % This is the department committee chairman, not the thesis committee
 % chairman.  You should replace this with your Department's Committee
 % Chairman.
-\chairman{Anne E. White}{Cecil and Ida Green Associate Professor}
+\reader{Anne E. White}{Cecil and Ida Green Associate Professor}
 
+\chairman{Ju Li}{Battelle Energy Alliance Professor}
 % Make the titlepage based on the above information.  If you need
 % something special and can't use the standard form, you can specify
 % the exact text of the titlepage yourself.  Put it in a titlepage
