Use pngs for many element images

--- a/intro.tex
+++ b/intro.tex
@@ -29,10 +29,7 @@ When people talk about fusion, they usually talk about plasma physics, and when 
 
 \begin{figure}
 	\centering
-	\begin{adjustbox}{width=0.75\textwidth}
-		\input{images/fusion_reactor}
-	\end{adjustbox}
-%	\includegraphics[width=0.75\textwidth]{images/test_image}
+	\includegraphics[width=0.75\textwidth]{images/fusion_reactor}
 	\caption{Cut-Away of Tokamak Reactor} ~\\
 	\small The three main components of a magnetic fusion reactor are: the tokamak structure, the plasma fuel, and the superconducting solenoid at the center.
 \end{figure}
